@@ -48,13 +48,11 @@ import org.apache.http.entity.mime.MultipartEntityBuilder;
 import org.apache.http.entity.mime.content.FileBody;
 import org.apache.http.impl.client.DefaultHttpClient;
 import org.apache.http.message.BasicNameValuePair;
-import org.apache.http.protocol.HTTP;
 import org.apache.http.util.EntityUtils;
 import org.apache.log4j.ConsoleAppender;
 import org.apache.log4j.Level;
 import org.apache.log4j.Logger;
 import org.apache.log4j.PatternLayout;
-import org.tdar.core.bean.resource.FileAccessRestriction;
 
 /**
  * http://thegenomefactory.blogspot.com.au/2013/08/minimum-standards-for-bioinformatics.html
@@ -63,13 +61,10 @@ import org.tdar.core.bean.resource.FileAccessRestriction;
  */
 public class CommandLineAPITool {
 
+    private static final String UTF_8 = "UTF-8";
     // The following are the names of the fields on the APIController that we set
     /** Set in the query. Not really needed. */
     private static final String API_UPLOADED_ITEM = "uploadedItem";
-    /** The access restrictions that is to be applied to the uploaded files */
-    private static final String API_FIELD_FILE_ACCESS_RESTRICTION = "fileAccessRestriction";
-    /** The list of files that are to have the access restriction applied to them */
-    private static final String API_FIELD_RESTRICTED_FILES = "restrictedFiles";
     /** The list of attachment files */
     private static final String API_FIELD_UPLOAD_FILE = "uploadFile";
     /** The meta-data describing the files, an xml file itself, adhering to the published schema */
@@ -99,7 +94,6 @@ public class CommandLineAPITool {
     private static final String OPTION_ACCOUNTID = "accountid";
     private static final String OPTION_SLEEP = "sleep";
     private static final String OPTION_PROJECT_ID = "projectid";
-    private static final String OPTION_ACCESS_RESTRICTION = API_FIELD_FILE_ACCESS_RESTRICTION;
     private static final String ALPHA_TDAR_ORG = "alpha.tdar.org";
     @SuppressWarnings("unused")
     private static final String CORE_TDAR_ORG = "core.tdar.org";
@@ -117,7 +111,6 @@ public class CommandLineAPITool {
     private Long projectId;
     private Long accountId;
     private long msSleepBetween;
-    private FileAccessRestriction fileAccessRestriction = FileAccessRestriction.PUBLIC;
     private List<String> seen = new ArrayList<>();
     private String httpProtocol = HTTPS_PROTOCOL;
     private File[] files;
@@ -195,9 +188,6 @@ public class CommandLineAPITool {
         if (line.hasOption(OPTION_SLEEP)) {
             importer.setMsSleepBetween(getAsLong(line.getOptionValue(OPTION_SLEEP)));
         }
-        if (line.hasOption(OPTION_ACCESS_RESTRICTION)) {
-            importer.setFileAccessRestriction(FileAccessRestriction.valueOf(line.getOptionValue(OPTION_ACCESS_RESTRICTION)));
-        }
         if (line.hasOption(OPTION_SEEN_FILE)) {
             importer.setSeenFile(line.getOptionValue(OPTION_SEEN_FILE));
         }
@@ -229,9 +219,6 @@ public class CommandLineAPITool {
         options.addOption(OptionBuilder.withArgName(OPTION_SEEN_FILE).hasArg()
                 .withDescription("the name of the file to record successful file tranfers to (defaults to " + IMPORT_SEEN_FILE + ")")
                 .create(OPTION_SEEN_FILE));
-        options.addOption(OptionBuilder.withArgName(OPTION_ACCESS_RESTRICTION).hasArg()
-                .withDescription("the access restriction to be applied - one of [" + getFileAccessRestrictionChoices() + "]")
-                .create(OPTION_ACCESS_RESTRICTION));
         return options;
     }
 
@@ -264,9 +251,6 @@ public class CommandLineAPITool {
                 case OPTION_SEEN_FILE:
                     importer.setSeenFile(property);
                     break;
-                case OPTION_ACCESS_RESTRICTION:
-                    importer.setFileAccessRestriction(FileAccessRestriction.valueOf(property));
-                    break;
                 case OPTION_FILE:
                     importer.setFiles(property.split(","));
                     break;
@@ -287,18 +271,6 @@ public class CommandLineAPITool {
         console.setWriter(new OutputStreamWriter(System.out));
         logger.setLevel(Level.INFO);
         logger.addAppender(console);
-    }
-
-    private static String getFileAccessRestrictionChoices() {
-        String result = "";
-        FileAccessRestriction[] values = FileAccessRestriction.values();
-        for (int i = 1; i <= values.length; i++) {
-            result = result + values[i - 1];
-            if (i < values.length) {
-                result = result + " | ";
-            }
-        }
-        return result;
     }
 
     private static boolean hasNoOptions(CommandLine line) {
@@ -375,7 +347,7 @@ public class CommandLineAPITool {
             postNameValuePairs.add(new BasicNameValuePair("userLogin.loginUsername", getUsername()));
             postNameValuePairs.add(new BasicNameValuePair("userLogin.loginPassword", getPassword()));
 
-            tdarAuth.setEntity(new UrlEncodedFormEntity(postNameValuePairs, HTTP.UTF_8));
+            tdarAuth.setEntity(new UrlEncodedFormEntity(postNameValuePairs, UTF_8));
             HttpResponse response = httpclient.execute(tdarAuth);
             HttpEntity entity = response.getEntity();
             logger.trace("Login form get: " + response.getStatusLine());
@@ -466,7 +438,7 @@ public class CommandLineAPITool {
         String path = record.getPath();
         try {
             HttpPost apicall = new HttpPost(httpProtocol + getHostname() + "/api/upload?" + API_UPLOADED_ITEM + "="
-                    + URLEncoder.encode(path, "UTF-8"));
+                    + URLEncoder.encode(path, UTF_8));
             MultipartEntityBuilder builder = MultipartEntityBuilder.create();
             if (seen.contains(path)) {
                 logger.warn("skipping: " + path);
@@ -482,14 +454,9 @@ public class CommandLineAPITool {
                 builder.addTextBody(API_FIELD_ACCOUNT_ID, accountId.toString());
             }
 
-            builder.addTextBody(API_FIELD_FILE_ACCESS_RESTRICTION, getFileAccessRestriction().name());
-
             if (!CollectionUtils.isEmpty(attachments)) {
                 for (int i = 0; i < attachments.size(); i++) {
                     builder.addPart(API_FIELD_UPLOAD_FILE, new FileBody(attachments.get(i)));
-                    if (getFileAccessRestriction().isRestricted()) {
-                        builder.addTextBody(API_FIELD_RESTRICTED_FILES, attachments.get(i).getName());
-                    }
                 }
             }
 
@@ -603,14 +570,6 @@ public class CommandLineAPITool {
 
     public void setSeen(List<String> seen) {
         this.seen = seen;
-    }
-
-    public FileAccessRestriction getFileAccessRestriction() {
-        return fileAccessRestriction;
-    }
-
-    public void setFileAccessRestriction(FileAccessRestriction fileAccessRestriction) {
-        this.fileAccessRestriction = fileAccessRestriction;
     }
 
     /**
